--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/back6"
-    tools:context=".MainActivity">
+    tools:context=".Model.MainActivity">
 
     <TextView
         android:id="@+id/textView5"
