--- a/app/src/main/res/menu/menu_top.xml
+++ b/app/src/main/res/menu/menu_top.xml
@@ -3,10 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
 
     >
-    <item android:title="Món yêu thích"
-    android:id="@+id/mnuyeuthich"
+    <item android:title="Danh Sách"
+        android:icon="@drawable/ic_baseline_list_24"
+    android:id="@+id/mnudanhsach"
         />
-    <item android:title="Thông tin"
-        android:id="@+id/thongtin"
+    <item android:title="Danh Mục"
+        android:id="@+id/mnudanhmuc"
+        android:icon="@drawable/ic_baseline_category_24"
         />
 </menu>
