--- a/app/src/main/res/layout/row_category_list.xml
+++ b/app/src/main/res/layout/row_category_list.xml
@@ -1,45 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-android:gravity="center_vertical"
-    >
 
+    android:orientation="vertical"
+    >
 
     <ImageView
         android:id="@+id/imgCate"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="493dp" />
-
-    <TextView
-        android:id="@+id/txtNameCate"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="174dp"
 
-        android:layout_row="0"
-        android:layout_column="1"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="center_vertical"
-        android:layout_marginStart="44dp"
-        android:layout_marginLeft="44dp"
-        android:layout_marginTop="63dp"
-        android:layout_marginEnd="112dp"
-        android:layout_marginRight="112dp"
-        android:layout_marginBottom="535dp"
-        android:layout_toEndOf="@+id/imgCate"
-        android:layout_toRightOf="@+id/imgCate"
-        android:padding="12dip"
-        android:text="SomeText"
-        android:textColor="#DC2929" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="65dp"
+        android:layout_marginLeft="65dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="53dp"
+        android:layout_marginRight="53dp"
+         />
 
-</GridLayout>
+    <TextView
+        android:id="@+id/txtNameCate"
+        android:layout_width="261dp"
+        android:layout_height="84dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="43dp"
+        android:gravity="center"
+        android:text="TextView Text Above ImageView"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#EA0E0E"
+        android:textSize="36sp"
+        android:textStyle="bold" />
+</RelativeLayout>
