--- a/app/src/main/res/layout/activity_dentail.xml
+++ b/app/src/main/res/layout/activity_dentail.xml
@@ -9,7 +9,7 @@
 
     <ImageView
         android:id="@+id/imgDentail_img"
-        android:layout_width="399dp"
+        android:layout_width="match_parent"
         android:layout_height="218dp"
         android:layout_marginTop="28dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,8 +20,8 @@
 
     <TextView
         android:id="@+id/txtDentail_Name"
-        android:layout_width="327dp"
-        android:layout_height="wrap_content"
+        android:layout_width="363dp"
+        android:layout_height="87dp"
         android:layout_marginStart="36dp"
         android:layout_marginLeft="36dp"
         android:layout_marginTop="12dp"
