--- a/app/src/main/res/layout/row_food_list.xml
+++ b/app/src/main/res/layout/row_food_list.xml
@@ -3,16 +3,47 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/imgFood"
-        android:layout_width="120dp"
+<!--    <ImageView-->
+<!--        android:id="@+id/imgFood"-->
+<!--        android:layout_width="120dp"-->
 
-        android:layout_height="120dp"/>
-    <TextView
-        android:id="@+id/txtNameFood"
-        android:text="Tên"
-        android:layout_toRightOf="@id/imgFood"
-        android:layout_width="wrap_content"
+<!--        android:layout_height="120dp"/>-->
+<!--    <TextView-->
+<!--        android:id="@+id/txtNameFood"-->
+<!--        android:text="Tên"-->
+<!--        android:layout_toRightOf="@id/imgFood"-->
+<!--        android:layout_width="wrap_content"-->
 
-        android:layout_height="wrap_content"/>
+<!--        android:layout_height="wrap_content"/>-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imgFood"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="25dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/txtNameFood"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="Tên Món Ăn"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+
+
+        </LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
