--- a/app/src/main/res/menu/menu_top.xml
+++ b/app/src/main/res/menu/menu_top.xml
@@ -7,8 +7,16 @@
         android:icon="@drawable/ic_baseline_list_24"
     android:id="@+id/mnudanhsach"
         />
+    <item android:title="Danh Sách Video"
+        android:icon="@drawable/ic_baseline_ondemand_video_24"
+        android:id="@+id/mnudanhsachvideo"
+        />
     <item android:title="Danh Mục"
         android:id="@+id/mnudanhmuc"
         android:icon="@drawable/ic_baseline_category_24"
+        />
+    <item android:title="Yêu Thích"
+        android:id="@+id/mnuyeuthich"
+        android:icon="@drawable/ic_baseline_favorite_24"
         />
 </menu>
