--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -3,9 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Model.VideoFragment">
+    tools:context=".fragment.VideoFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
+    <ListView
+        android:id="@+id/listVideo"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="75dp"
+        tools:layout_editor_absoluteY="149dp" />
 
 </FrameLayout>
