--- a/app/src/main/res/menu/menu_top.xml
+++ b/app/src/main/res/menu/menu_top.xml
@@ -7,7 +7,7 @@
         android:icon="@drawable/ic_baseline_list_24"
     android:id="@+id/mnudanhsach"
         />
-    <item android:title="Danh Sách Video"
+    <item android:title="Video"
         android:icon="@drawable/ic_baseline_ondemand_video_24"
         android:id="@+id/mnudanhsachvideo"
         />
